MD Settings: user list fixes

This CL:
* Updates the API code to make better use of user_manager::User.
* Adds an isSUpervised property to usersPrivate::User.
* Hides the email address for supervised users and whitelisted users not on the device (where the name is unknown).
* Adds CrScrollableBehavior to the user list so that top and bottom borders for the list display properly.
* Adds a requestUpdateScroll method to CrScrollableBehavior so that borders are set properly when the list updates (in addition to when it scrolls).

BUG=715518
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2840313002
Cr-Commit-Position: refs/heads/master@{#468360}

Former-commit-id: a03ce481e33b012c70d864788a2c18568128d8cc