chrome/browser/resources/settings/people_page/user_list.js
@@ -16,7 +16,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 Polymer({
   is: 'settings-user-list',
 
-  behaviors: [I18nBehavior, settings.RouteObserverBehavior],
+  behaviors: [
+    CrScrollableBehavior,
+    I18nBehavior,
+    settings.RouteObserverBehavior,
+  ],
 
   properties: {
     /**
@@ -85,6 +89,7 @@ Polymer({
       else
         return -1;
     });
+    this.requestUpdateScroll();
   },
 
   /**
@@ -107,5 +112,13 @@ Polymer({
    */
   getProfilePictureUrl_: function(user) {
     return 'chrome://userimage/' + user.email + '?id=' + Date.now();
-  }
+  },
+
+  /**
+   * @param {chrome.usersPrivate.User} user
+   * @private
+   */
+  shouldShowEmail_: function(user) {
+    return !user.isSupervised && user.name != user.email;
+  },
 });
